deployments/qbittorrent/qb-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: servarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "qb.k3s-cluster.local.obleey.com"
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
